# json-search

./: README.md
backend/: .gitignore  Dockerfile  makefile  pyproject.toml  requirements.txt
backend/json_search/: config.py  search.py  server.py  stores.json
backend/tests/: test_server.py  test_tails_assignment.py
client/: package.json
client/src/: App.vue  main.js
client/src/components/atoms/: ActionButton.vue  InputField.vue
client/src/components/molecules/: Result.vue  ResultsList.vue  SearchInput.vue  SuggestionsList.vue
client/src/components/organisms/: SearchAndResults.vue
client/src/utils/: search.js
client/stories/: ActionButton.stories.js  SearchInput.stories.js
