[tool.poetry]
name = "json_search"
version = "0.1.0"
description = ""
authors = ["Nick"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
whoosh = "^2.7.4"
pathlib = "^1.0.1"
orjson = "^3.3.0"
pytest-benchmark = "^3.2.3"
flask_session = "^0.3.2"
flask-cors = "^3.0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"